--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -3,4 +3,9 @@ h1 {
   line-height:1.4;
   font-weight: bold;
   color: #0072ae
+  background-color: black;
+  width: 300px;
+  padding: 50px;
+  border: 10px solid blue;
+  margin: 50px;
 }
