--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -2,8 +2,8 @@ h1 {
   font-size: 40px;
   line-height:1.4;
   font-weight: bold;
-  color: #0072ae
-  background: black;
+  color: #0072ae;
+  background-color: black;
   width: 300px;
   padding: 50px;
   border: 10px solid blue;
