--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -5,7 +5,7 @@ h1 {
   color: #0072ae;
   background-color: black;
   width: 300px;
-  padding: 5px solid green;
+  padding: 5px;
   border: 10px solid blue;
   margin: 50px;
 }
