--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -7,6 +7,9 @@ h1 {
 .alt-headline {
   font-size: 40px;
 }
+#main-site-title {
+  color: deeppink;
+}
 .column-title {
   font-style: normal;
   color: #0072ae;
