--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -14,4 +14,9 @@ h1 {
   font-style: normal;
   color: #0072ae;
   font-weight: bold;
-} 
+}
+.secondary-section h2 {
+  font-style: normal;
+  color: #eb2428;
+  margin-bottom: 10px;
+}
