--- a/CSS/css/style.css
+++ b/CSS/css/style.css
@@ -17,9 +17,9 @@ h1 {
 }
 .secondary-section h2 {
   font-style: normal;
-  color: #eb2428;
+  color: #0072ae;
   margin-bottom: 10px;
 }
 .secondary-section p {
   color: deeppink;
-} 
+}
