--- a/floats/css/style.css
+++ b/floats/css/style.css
@@ -1,7 +1,7 @@
 /****************
 Reset
 ****************/
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -15,8 +15,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
   margin: 0;
@@ -27,7 +27,7 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
@@ -54,41 +54,41 @@ table {
   outline: none;
 }
 strong {
-  font-weight: bold; 
+  font-weight: bold;
 }
 /* micro clear fix */
 .grouping:before,
 .grouping:after {
   content: " ";
-  display: table; 
+  display: table;
 }
 .grouping:after {
-  clear: both; 
+  clear: both;
 }
 img, iframe, video, object {
-  max-width: 100%; 
+  max-width: 100%;
 }
 /***************
 Global
 ***************/
 ::-moz-selection {
-  background-color: #eb2428; 
+  background-color: #eb2428;
 }
 ::selection {
-  background-color: #eb2428; 
+  background-color: #eb2428;
 }
 
 .wrapper {
   width: 85%;
   max-width: 1200px;
   margin-left: auto;
-  margin-right: auto; 
+  margin-right: auto;
 }
 body {
   background-color: #dcdcdc;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 100;
-  font-size: 16px; 
+  font-size: 16px;
 }
 a {
   text-decoration: none;
@@ -98,13 +98,13 @@ h1 {
   font-weight: 700;
   font-size: 80px;
   color: #0072ae;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 h2 {
   font-size: 30px;
   margin-bottom: 10px;
   color: #eb2428;
-  font-weight: 700; 
+  font-weight: 700;
 }
 p {
   line-height: 1.6;
@@ -123,7 +123,7 @@ Interior Pages
 }
 .content-block .figure {
   margin: 30px;
-  float: right;
+  float: left;
 }
 .content-block h1 {
   color: #fff;
@@ -147,10 +147,3 @@ Interior Pages
 .style-1.wave-border {
   background: #58C9EB url('../images/wave.jpg') repeat-x 0 0;
 }
- 
-
-
-
-
-
-
