--- a/floats/css/style.css
+++ b/floats/css/style.css
@@ -2,3 +2,11 @@
   margin: 30px;
   float: left;
 }
+.content-block h1 {
+  color: #fff;
+  background-color: deeppink;
+}
+.content-block p {
+  font-family: Georgia, 'Times New Roman' sans-serif;
+  background-color: green;
+} 
